# Online-Behavioral-Modeling

./: CONTRIBUTING.md  README.md  behaviour_constructor.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
