[build-system]
requires = ["hatchling>=1.12"]
build-backend = "hatchling.build"

[project]
name = "online-behavioral-modeling"        # your PyPI name (lowercase, dashes ok)
version = "0.1.1"
description = "Tools for online behavioral modeling"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Noor Jamaludeen" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["LICENSE", "NOTICE"]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "joblib>=1.3",
  "scikit-learn>=1.3",
  "h2o>=3.38",
  "optuna>=3.4",
]
